--- a/dashboard/decorator-dashboard.html
+++ b/dashboard/decorator-dashboard.html
@@ -348,28 +348,6 @@
                 </a>
             </div>
 
-            <!-- CHARTS -->
-            <div class="charts-grid">
-                <div class="chart-card">
-                    <h3 class="chart-title"><span>🎨</span> Decoration Pipeline</h3>
-                    <div class="chart-container">
-                        <canvas id="pipelineChart"></canvas>
-                    </div>
-                </div>
-                <div class="chart-card">
-                    <h3 class="chart-title"><span>📝</span> Orders With vs Without Notes</h3>
-                    <div class="chart-container">
-                        <canvas id="notesChart"></canvas>
-                    </div>
-                </div>
-                <div class="chart-card">
-                    <h3 class="chart-title"><span>📈</span> Completed By Day</h3>
-                    <div class="chart-container">
-                        <canvas id="completedChart"></canvas>
-                    </div>
-                </div>
-            </div>
-
             <!-- TABLES -->
             <div class="tables-grid">
                 <!-- TODAY'S PICKUPS -->
@@ -494,126 +472,7 @@
                 debugDiv.style.display = 'none';
                 debugDiv.id = 'chartjs-debug';
                 document.body.appendChild(debugDiv);
-                if (typeof Chart === 'undefined') {
-                    console.error('Chart.js not loaded!');
-                    return;
-                }
-
-                // Revenue Chart
-                const revenueCtx = document.getElementById('revenueChart');
-                console.log('Creating Revenue Chart:', revenueCtx);
-                if (revenueCtx) {
-                    new Chart(revenueCtx, {
-                        type: 'line',
-                        data: {
-                            labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
-                            datasets: [{
-                                label: 'Revenue',
-                                data: [340, 420, 380, 510, 460, 390, 435],
-                                borderColor: '#C44569',
-                                backgroundColor: 'rgba(196, 69, 105, 0.1)',
-                                fill: true,
-                                tension: 0.4,
-                                pointRadius: 4,
-                                pointHoverRadius: 6,
-                                pointBackgroundColor: '#C44569',
-                                pointBorderColor: '#fff',
-                                pointBorderWidth: 2
-                            }]
-                        },
-                        options: {
-                            responsive: true,
-                            maintainAspectRatio: false,
-                            plugins: {
-                                legend: { display: false }
-                            },
-                            scales: {
-                                y: {
-                                    beginAtZero: true,
-                                    ticks: {
-                                        callback: v => '$' + v,
-                                        font: { size: 11 }
-                                    },
-                                    grid: { color: '#F3F4F6' }
-                                },
-                                x: {
-                                    ticks: { font: { size: 11 } },
-                                    grid: { display: false }
-                                }
-                            }
-                        }
-                    });
-                }
-
-                // Products Chart
-                const productsCtx = document.getElementById('productsChart');
-                console.log('Creating Products Chart:', productsCtx);
-                if (productsCtx) {
-                    new Chart(productsCtx, {
-                        type: 'bar',
-                        data: {
-                            labels: ['Chocolate', 'Vanilla', 'Red Velvet', 'Strawberry', 'Lemon'],
-                            datasets: [{
-                                label: 'Orders',
-                                data: [12, 10, 8, 7, 6],
-                                backgroundColor: '#10B981',
-                                borderRadius: 6,
-                                borderSkipped: false
-                            }]
-                        },
-                        options: {
-                            indexAxis: 'y',
-                            responsive: true,
-                            maintainAspectRatio: false,
-                            plugins: {
-                                legend: { display: false }
-                            },
-                            scales: {
-                                x: {
-                                    beginAtZero: true,
-                                    ticks: { font: { size: 11 } },
-                                    grid: { color: '#F3F4F6' }
-                                },
-                                y: {
-                                    ticks: { font: { size: 11 } },
-                                    grid: { display: false }
-                                }
-                            }
-                        }
-                    });
-                }
-
-                // Status Chart
-                const statusCtx = document.getElementById('statusChart');
-                console.log('Creating Status Chart:', statusCtx);
-                if (statusCtx) {
-                    new Chart(statusCtx, {
-                        type: 'doughnut',
-                        data: {
-                            labels: ['Ready', 'Decorating', 'Baking'],
-                            datasets: [{
-                                data: [3, 1, 2],
-                                backgroundColor: ['#10B981', '#A855F7', '#F59E0B'],
-                                borderColor: '#fff',
-                                borderWidth: 3
-                            }]
-                        },
-                        options: {
-                            responsive: true,
-                            maintainAspectRatio: false,
-                            plugins: {
-                                legend: {
-                                    position: 'bottom',
-                                    labels: {
-                                        font: { size: 11 },
-                                        usePointStyle: true,
-                                        padding: 12
-                                    }
-                                }
-                            }
-                        }
-                    });
-                }
+                // Charts removed for Decorator dashboard
             }, 200);
         }
 
