--- a/dashboard/manager-dashboard.html
+++ b/dashboard/manager-dashboard.html
@@ -512,7 +512,7 @@
                             labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
                             datasets: [{
                                 label: 'Revenue',
-                                data: [340, 420, 380, 510, 460, 390, 435],
+                                data: [420, 510, 380, 600, 720, 680, 740],
                                 borderColor: '#C44569',
                                 backgroundColor: 'rgba(196, 69, 105, 0.1)',
                                 fill: true,
@@ -555,10 +555,10 @@
                     new Chart(productsCtx, {
                         type: 'bar',
                         data: {
-                            labels: ['Chocolate', 'Vanilla', 'Red Velvet', 'Strawberry', 'Lemon'],
+                            labels: ['Chocolate Ganache', 'Lemon Doberge', 'Pecan Praline', 'Vanilla Cake'],
                             datasets: [{
                                 label: 'Orders',
-                                data: [12, 10, 8, 7, 6],
+                                data: [20, 14, 9, 11],
                                 backgroundColor: '#10B981',
                                 borderRadius: 6,
                                 borderSkipped: false
@@ -596,7 +596,7 @@
                             labels: ['To Be Created', 'In Baking', 'Decorating', 'Completed', 'Picked Up', 'Cancelled'],
                             datasets: [{
                                 label: 'Orders',
-                                data: [4, 3, 2, 5, 3, 1],
+                                data: [12, 7, 5, 9, 6, 1],
                                 backgroundColor: ['#F59E0B', '#EF4444', '#A855F7', '#10B981', '#3B82F6', '#6B7280'],
                                 borderRadius: 4,
                                 borderSkipped: false
