--- a/dashboard/baker-dashboard.html
+++ b/dashboard/baker-dashboard.html
@@ -348,28 +348,6 @@
                 </a>
             </div>
 
-            <!-- CHARTS -->
-            <div class="charts-grid">
-                <div class="chart-card">
-                    <h3 class="chart-title"><span>📈</span> Baking Pipeline</h3>
-                    <div class="chart-container">
-                        <canvas id="pipelineChart"></canvas>
-                    </div>
-                </div>
-                <div class="chart-card">
-                    <h3 class="chart-title"><span>📅</span> Orders by Pickup Date</h3>
-                    <div class="chart-container">
-                        <canvas id="pickupChart"></canvas>
-                    </div>
-                </div>
-                <div class="chart-card">
-                    <h3 class="chart-title"><span>📊</span> Active vs Cancelled</h3>
-                    <div class="chart-container">
-                        <canvas id="cancelledChart"></canvas>
-                    </div>
-                </div>
-            </div>
-
             <!-- TABLES -->
             <div class="tables-grid">
                 <!-- BAKING QUEUE -->
@@ -503,90 +481,7 @@
                 debugDiv.style.display = 'none';
                 debugDiv.id = 'chartjs-debug';
                 document.body.appendChild(debugDiv);
-                if (typeof Chart === 'undefined') {
-                    console.error('Chart.js not loaded!');
-                    return;
-                }
-
-                // Baking Pipeline Chart
-                const pipelineCtx = document.getElementById('pipelineChart');
-                if (pipelineCtx) {
-                    new Chart(pipelineCtx, {
-                        type: 'bar',
-                        data: {
-                            labels: ['To Be Created', 'In Baking', 'Decorating'],
-                            datasets: [{
-                                label: 'Orders',
-                                data: [4, 2, 2],
-                                backgroundColor: ['#F59E0B', '#EF4444', '#A855F7'],
-                                borderRadius: 4
-                            }]
-                        },
-                        options: {
-                            responsive: true,
-                            maintainAspectRatio: false,
-                            plugins: { legend: { display: false } },
-                            scales: {
-                                y: { beginAtZero: true, ticks: { font: { size: 11 } }, grid: { color: '#F3F4F6' } },
-                                x: { ticks: { font: { size: 10 } }, grid: { display: false } }
-                            }
-                        }
-                    });
-                }
-
-                // Orders by Pickup Date Chart
-                const pickupCtx = document.getElementById('pickupChart');
-                if (pickupCtx) {
-                    new Chart(pickupCtx, {
-                        type: 'line',
-                        data: {
-                            labels: ['Today', 'Tomorrow', 'Day 3', 'Day 4', 'Day 5', 'Day 6', 'Day 7'],
-                            datasets: [{
-                                label: 'Orders',
-                                data: [3, 5, 2, 4, 3, 1, 2],
-                                borderColor: '#10B981',
-                                backgroundColor: 'rgba(16, 185, 129, 0.1)',
-                                fill: true,
-                                tension: 0.4,
-                                pointRadius: 4,
-                                pointBackgroundColor: '#10B981'
-                            }]
-                        },
-                        options: {
-                            responsive: true,
-                            maintainAspectRatio: false,
-                            plugins: { legend: { display: false } },
-                            scales: {
-                                y: { beginAtZero: true, ticks: { font: { size: 11 } }, grid: { color: '#F3F4F6' } },
-                                x: { ticks: { font: { size: 10 } }, grid: { display: false } }
-                            }
-                        }
-                    });
-                }
-
-                // Active vs Cancelled Chart
-                const cancelledCtx = document.getElementById('cancelledChart');
-                if (cancelledCtx) {
-                    new Chart(cancelledCtx, {
-                        type: 'doughnut',
-                        data: {
-                            labels: ['Active Orders', 'Cancelled Orders'],
-                            datasets: [{
-                                data: [18, 2],
-                                backgroundColor: ['#10B981', '#EF4444'],
-                                borderColor: '#fff',
-                                borderWidth: 3
-                            }]
-                        },
-                        options: {
-                            responsive: true,
-                            maintainAspectRatio: false,
-                            plugins: {
-                                legend: { position: 'bottom', labels: { font: { size: 11 }, usePointStyle: true, padding: 12 } }
-                            }
-                        }
-                    });
-                }
+                // Charts removed for Baker dashboard
                     });
                 }
 
