--- a/dashboard/new-customer.html
+++ b/dashboard/new-customer.html
@@ -8,18 +8,20 @@
     <script src="js/ux-enhancements.js"></script>
     <style>
         .form-container {
-            max-width: 1200px;
-            margin: 0 auto;
+            max-width: 100%;
+            margin: 0;
             background: white;
-            border-radius: 8px;
-            padding: 30px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            padding: 40px;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
         }
 
         .form-section {
-            margin-bottom: 40px;
-            padding-bottom: 30px;
-            border-bottom: 2px solid #f0f0f0;
+            margin-bottom: 45px;
+            padding: 30px;
+            background: linear-gradient(to right, #FAFAFA, #FFFFFF);
+            border-radius: 10px;
+            border: 1px solid #E5E7EB;
         }
 
         .form-section:last-child {
@@ -28,18 +30,20 @@
 
         .section-title {
             color: #C44569;
-            font-size: 18px;
-            font-weight: 600;
-            margin-bottom: 20px;
+            font-size: 20px;
+            font-weight: 700;
+            margin-bottom: 25px;
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 12px;
+            padding-bottom: 12px;
+            border-bottom: 3px solid #C44569;
         }
 
         .form-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 25px;
             margin-bottom: 20px;
         }
 
@@ -50,20 +54,22 @@
 
         .form-group label {
             font-weight: 600;
-            color: #333;
-            margin-bottom: 8px;
+            color: #1F2937;
+            margin-bottom: 10px;
             font-size: 14px;
+            letter-spacing: 0.3px;
         }
 
         .form-group input,
         .form-group select,
         .form-group textarea {
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            font-size: 14px;
+            padding: 14px 16px;
+            border: 2px solid #E5E7EB;
+            border-radius: 8px;
+            font-size: 15px;
             font-family: inherit;
-            transition: border-color 0.3s;
+            transition: all 0.3s;
+            background: white;
         }
 
         .form-group input:focus,
@@ -71,69 +77,82 @@
         .form-group textarea:focus {
             outline: none;
             border-color: #C44569;
-            box-shadow: 0 0 0 3px rgba(196, 69, 105, 0.1);
+            box-shadow: 0 0 0 4px rgba(196, 69, 105, 0.12);
+            transform: translateY(-1px);
+        }
+
+        .form-group input:hover,
+        .form-group select:hover,
+        .form-group textarea:hover {
+            border-color: #C44569;
         }
 
         .form-group textarea {
             grid-column: 1 / -1;
             resize: vertical;
-            min-height: 100px;
+            min-height: 120px;
         }
 
         .required-indicator {
             color: #EF4444;
             margin-left: 4px;
+            font-weight: 700;
         }
 
         .form-actions {
             display: flex;
-            gap: 12px;
+            gap: 15px;
             justify-content: center;
-            margin-top: 40px;
-            padding-top: 30px;
-            border-top: 2px solid #f0f0f0;
+            margin-top: 50px;
+            padding-top: 40px;
+            border-top: 3px solid #F3F4F6;
         }
 
         .btn-submit {
-            background: #C44569;
+            background: linear-gradient(135deg, #C44569, #A33854);
             color: white;
-            padding: 12px 32px;
+            padding: 16px 48px;
             border: none;
-            border-radius: 6px;
-            font-size: 16px;
-            font-weight: 600;
+            border-radius: 8px;
+            font-size: 17px;
+            font-weight: 700;
             cursor: pointer;
-            transition: background 0.3s;
+            transition: all 0.3s;
+            box-shadow: 0 4px 12px rgba(196, 69, 105, 0.3);
         }
 
         .btn-submit:hover {
-            background: #a83a54;
+            background: linear-gradient(135deg, #A33854, #8B2E46);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(196, 69, 105, 0.4);
         }
 
         .btn-reset {
-            background: #f0f0f0;
-            color: #333;
-            padding: 12px 32px;
-            border: none;
-            border-radius: 6px;
-            font-size: 16px;
+            background: #F3F4F6;
+            color: #1F2937;
+            padding: 16px 48px;
+            border: 2px solid #E5E7EB;
+            border-radius: 8px;
+            font-size: 17px;
             font-weight: 600;
             cursor: pointer;
-            transition: background 0.3s;
+            transition: all 0.3s;
         }
 
         .btn-reset:hover {
-            background: #e0e0e0;
+            background: #E5E7EB;
+            border-color: #D1D5DB;
+            transform: translateY(-2px);
         }
 
         .btn-cancel {
-            background: transparent;
+            background: white;
             color: #C44569;
-            padding: 12px 32px;
-            border: 2px solid #C44569;
-            border-radius: 6px;
-            font-size: 16px;
-            font-weight: 600;
+            padding: 16px 48px;
+            border: 3px solid #C44569;
+            border-radius: 8px;
+            font-size: 17px;
+            font-weight: 700;
             cursor: pointer;
             transition: all 0.3s;
         }
@@ -141,50 +160,93 @@
         .btn-cancel:hover {
             background: #C44569;
             color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(196, 69, 105, 0.3);
         }
 
         .help-text {
-            font-size: 12px;
-            color: #666;
-            margin-top: 4px;
+            font-size: 13px;
+            color: #6B7280;
+            margin-top: 6px;
+            font-style: italic;
         }
 
         .checkbox-group {
             display: flex;
             align-items: center;
-            gap: 8px;
-            margin-top: 8px;
+            gap: 10px;
+            margin-top: 0;
+            padding: 16px 20px;
+            background: linear-gradient(135deg, #FEF3C7, #FDE68A);
+            border: 2px solid #F59E0B;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .checkbox-group:hover {
+            background: linear-gradient(135deg, #FDE68A, #FCD34D);
+            border-color: #D97706;
+            transform: translateX(4px);
         }
 
         .checkbox-group input[type="checkbox"] {
-            width: 18px;
-            height: 18px;
+            width: 22px;
+            height: 22px;
             cursor: pointer;
+            accent-color: #C44569;
         }
 
         .checkbox-group label {
             margin: 0;
             cursor: pointer;
-            font-weight: normal;
+            font-weight: 600;
+            color: #92400E;
+            font-size: 15px;
+        }
+
+        .preferred-badge {
+            background: linear-gradient(135deg, #FCD34D, #F59E0B);
+            color: #78350F;
+            padding: 4px 12px;
+            border-radius: 12px;
+            font-size: 12px;
+            font-weight: 700;
+            margin-left: auto;
         }
 
         @media (max-width: 1024px) {
             .form-grid {
                 grid-template-columns: repeat(2, 1fr);
+                gap: 20px;
             }
             
             .form-group.full-width {
                 grid-column: 1 / -1;
             }
+
+            .form-container {
+                padding: 30px;
+            }
         }
 
         @media (max-width: 768px) {
             .form-container {
-                padding: 20px;
+                padding: 25px 20px;
+                border-radius: 8px;
             }
 
             .form-grid {
                 grid-template-columns: 1fr;
+                gap: 18px;
+            }
+
+            .form-section {
+                padding: 20px;
+            }
+
+            .section-title {
+                font-size: 18px;
             }
 
             .form-actions {
@@ -195,6 +257,7 @@
             .btn-reset,
             .btn-cancel {
                 width: 100%;
+                padding: 14px 32px;
             }
         }
 
@@ -209,6 +272,12 @@
             
             .section-title {
                 font-size: 16px;
+                gap: 8px;
+            }
+
+            .form-section {
+                padding: 16px;
+                margin-bottom: 30px;
             }
         }
 
@@ -287,6 +356,22 @@
         .form-group.full-width {
             grid-column: 1 / -1;
         }
+
+        .page-header {
+            margin-bottom: 35px;
+        }
+
+        .page-title {
+            font-size: 32px;
+            color: #1F2937;
+            margin-bottom: 8px;
+            font-weight: 700;
+        }
+
+        .page-subtitle {
+            font-size: 16px;
+            color: #6B7280;
+        }
     </style>
 </head>
 <body>
@@ -325,6 +410,13 @@
 
             <!-- TOAST NOTIFICATION -->
             <div id="toast" class="toast"></div>
+
+            <!-- PREFERRED CUSTOMER TOGGLE -->
+            <div class="checkbox-group" style="margin-bottom: 30px;">
+                <input type="checkbox" id="preferredCustomer" name="preferredCustomer">
+                <label for="preferredCustomer">⭐ Mark as Preferred Customer</label>
+                <span class="preferred-badge">VIP</span>
+            </div>
 
             <!-- FORM CONTAINER -->
             <div class="form-container">
@@ -501,15 +593,7 @@
                             <div class="form-group full-width">
                                 <label for="comments">Comments About Customer</label>
                                 <textarea id="comments" name="comments" maxlength="1000" placeholder="Enter any additional notes about this customer..."></textarea>
-                                <p class="help-text">Maximum 1000 characters</p>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="checkbox-group">
-                                    <input type="checkbox" id="preferredCustomer" name="preferredCustomer">
-                                    <label for="preferredCustomer">Mark as Preferred Customer (Eligible for discounts)</label>
-                                </div>
-                                <p class="help-text">Preferred customers receive special discounts and priority service</p>
+                                <p class="help-text">Maximum 1000 characters (optional notes, dietary restrictions, preferences, etc.)</p>
                             </div>
                         </div>
                     </div>
