--- a/order-form.html
+++ b/order-form.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cake Order Form - Emily Bakes Cakes</title>
+    <meta http-equiv="refresh" content="0; url=order-form-wizard.html">
+    <script>window.location.href = 'order-form-wizard.html';</script>
+    <title>Redirecting - Emily Bakes Cakes</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: linear-gradient(135deg, #F8EBD7 0%, #E9E9E9 100%);
+        }
+        .redirect-message {
+            text-align: center;
+            padding: 40px;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+        .redirect-message h1 {
+            color: #C44569;
+            margin-bottom: 20px;
+        }
+        .redirect-message a {
+            color: #C44569;
+            text-decoration: none;
+            font-weight: 600;
+        }
+    </style>
+</head>
+<body>
+    <div class="redirect-message">
+        <h1>🎂 Redirecting to New Order Wizard...</h1>
+        <p>If you're not redirected automatically, <a href="order-form-wizard.html">click here</a>.</p>
+    </div>
+</body>
+</html>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@400;600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
