Refactor order form links to point to the new order form wizard. Updated multiple dashboard files to replace old order form links with the new wizard link. Removed unified mock data and old mock data files as they are no longer needed. Added a redirect in the order form to guide users to the new order form wizard.

--- a/dashboard/all-orders.html
+++ b/dashboard/all-orders.html
@@ -432,7 +432,7 @@
                     <h1 class="page-title">All Orders</h1>
                     <p class="page-subtitle">Manage and track all customer orders</p>
                 </div>
-                <a href="../order-form.html" class="action-btn-large" style="text-decoration: none;">+ Create New Order</a>
+                <a href="../order-form-wizard.html" class="action-btn-large" style="text-decoration: none;">+ Create New Order</a>
             </div>
 
             <!-- FILTERS -->
