--- a/dashboard/baker-dashboard.html
+++ b/dashboard/baker-dashboard.html
@@ -269,8 +269,8 @@
 
             <!-- QUICK ACTIONS -->
             <div class="quick-actions-bar">
-                <a href="../order-form.html" class="action-btn primary">Create New Order</a>
-                <a href="all-orders.html" class="action-btn">View Baking Queue</a>
+                <a href="../order-form-wizard.html" class="action-btn primary">Create New Order</a>
+                <a href="all-orders.html" class="action-btn">View Orders</a>
                 <a href="view-products.html" class="action-btn">View Products</a>
                 <a href="reports.html" class="action-btn">Reports</a>
             </div>
