--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -118,7 +118,7 @@
 
             <!-- ACTION BUTTONS -->
             <div class="action-row" style="margin-bottom: 28px; display: flex; gap: 16px; flex-wrap: wrap;">
-                <a href="../order-form.html" class="action-btn-large" style="flex: 1; min-width: 200px;">+ Create New Order</a>
+                <a href="../order-form-wizard.html" class="action-btn-large" style="flex: 1; min-width: 200px;">+ Create New Order</a>
                 <a href="new-customer.html" class="action-btn-large action-btn-secondary" style="flex: 1; min-width: 200px;">+ Add Customer</a>
                 <a href="reports.html" class="action-btn-large" style="background: #6B7280; flex: 1; min-width: 200px;">📊 View Reports</a>
             </div>
@@ -129,7 +129,7 @@
                 <div class="left-section">
                     <!-- Recent Orders -->
                     <div class="compact-table">
-                        <h3>📋 Recent Orders</h3>
+                        <h3>Recent Orders</h3>
                         <table>
                             <thead>
                                 <tr>
@@ -147,7 +147,7 @@
 
                     <!-- Today's Pickups -->
                     <div class="compact-table">
-                        <h3>📦 Today's Pickups</h3>
+                        <h3>Today's Pickups</h3>
                         <table>
                             <thead>
                                 <tr>
@@ -165,7 +165,7 @@
 
                     <!-- Tomorrow's Schedule -->
                     <div class="compact-table">
-                        <h3>📅 Tomorrow's Schedule</h3>
+                        <h3>Tomorrow's Schedule</h3>
                         <div id="tomorrows-schedule"></div>
                     </div>
                 </div>
@@ -174,10 +174,10 @@
                 <div class="right-section">
                     <!-- Quick Actions Card -->
                     <div class="analytics-section">
-                        <h3 style="display: flex; align-items: center; gap: 8px;">⚡ Quick Actions</h3>
+                        <h3 style="display: flex; align-items: center; gap: 8px;">Quick Actions</h3>
                         <div style="display: flex; flex-direction: column; gap: 12px; padding-top: 16px;">
-                            <a href="../order-form.html" style="display: flex; align-items: center; gap: 12px; padding: 14px; background: linear-gradient(135deg, var(--primary), var(--primary-dark)); color: white; border-radius: 8px; text-decoration: none; transition: var(--transition-fast);" onmouseover="this.style.transform='translateX(4px)'" onmouseout="this.style.transform='translateX(0)'">
-                                <span style="font-size: 24px;">📝</span>
+                            <a href="../order-form-wizard.html" style="display: flex; align-items: center; gap: 12px; padding: 14px; background: linear-gradient(135deg, var(--primary), var(--primary-dark)); color: white; border-radius: 8px; text-decoration: none; transition: var(--transition-fast);" onmouseover="this.style.transform='translateX(4px)'" onmouseout="this.style.transform='translateX(0)'">
+                                <span style="font-size: 20px;">🎂</span>
                                 <div>
                                     <div style="font-weight: 600; font-size: 14px;">Create New Order</div>
                                     <div style="font-size: 12px; opacity: 0.9;">Add a new cake order</div>
